--- a/app/components/try-all-codepoints/template.hbs
+++ b/app/components/try-all-codepoints/template.hbs
@@ -1,3 +1,6 @@
 {{#each codepoints as |codepoint|}}
-    <i class='material-icons'>{{{unicode codepoint}}}</i>
+    <div id={{codepoint}} class='codepoint-card'>
+        <i class='material-icons'>{{{unicode codepoint}}}</i>
+        <span class='codepoint-card--name'>{{codepoint}}</span>
+    </div>
 {{/each}}
