--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,8 +9,8 @@ body {
 
 .grid-view {
     .codepoint-card {
-        width  : 48px;
-        height : 48px;
+        width  : 200px;
+        height : 125px;
         margin : 0 0 8px 0;
         padding: 6px;
         border : 1px solid #e2e2e2;
@@ -19,11 +19,13 @@ body {
         vertical-align: top;
         text-align    : center;
 
+        position: relative;
+
         .material-icons {
             font-family: 'Material Icons';
             font-weight: normal;
             font-style : normal;
-            font-size  : 24px;    /* Preferred icon size */
+            font-size  : 48px;    /* Preferred icon size */
 
             display       : inline-block;
             line-height   : 1;
@@ -44,6 +46,26 @@ body {
 
             /* Support for IE. */
             font-feature-settings: 'liga';
+        }
+
+        &--name, &--key {
+            font-family: 'Quicksand', sans-serif;
+            display: block;
+        }
+
+        &--icon {
+            margin: 15px 0 10px 0;
+        }
+
+        &--name {
+            position: absolute;
+            top     : 8px;
+            left    : 12px;
+        }
+
+        &--key {
+            word-wrap: break-word;
+            padding: 0 5px;
         }
 
         &.hide {
