--- a/app/components/try-all-codepoints/template.hbs
+++ b/app/components/try-all-codepoints/template.hbs
@@ -1,7 +1,7 @@
 <div class="grid-view">
     {{#each codepoints as |codepoint|}}
-        <div id={{codepoint}} class='codepoint-card'>
-            <i class='material-icons'>{{{unicode codepoint}}}</i>
+        <div id={{codepoint}} class='codepoint-card search' title={{codepoint}}>
+            <i class='codepoint-card--icon material-icons'>{{{unicode codepoint}}}</i>
             <span class='codepoint-card--name'>{{codepoint}}</span>
         </div>
     {{/each}}
