--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,7 +25,7 @@ body {
             font-family: 'Material Icons';
             font-weight: normal;
             font-style : normal;
-            font-size  : 48px;    /* Preferred icon size */
+            font-size  : 48px;
 
             display       : inline-block;
             line-height   : 1;
@@ -48,6 +48,7 @@ body {
             font-feature-settings: 'liga';
         }
 
+
         &--name, &--key {
             font-family: 'Quicksand', sans-serif;
             display: block;
@@ -67,6 +68,7 @@ body {
             word-wrap: break-word;
             padding: 0 5px;
         }
+
 
         &.hide {
             display: none;
@@ -88,6 +90,31 @@ body {
         &:hover {
             transform: scale(1.025);
             transition: 0.1s;
+        }
+
+
+        &.search {
+            width : 48px;
+            height: 48px;
+
+            .material-icons {
+                font-size: 24px;    /* Preferred icon size */
+            }
+
+            .codepoint-card--icon {
+                margin: 0;
+            }
+
+            .codepoint-card--name {
+                position: relative;
+                top: 0;
+                left: 0;
+            }
+
+            &:hover {
+                transform: scale(1);
+                transition: 0s;
+            }
         }
     }
 }
