--- a/app/components/try-all-codepoints/template.hbs
+++ b/app/components/try-all-codepoints/template.hbs
@@ -1,8 +1,14 @@
-<div class="grid-view">
-    {{#each codepoints as |codepoint|}}
-        <div id={{codepoint}} class='codepoint-card search' title={{codepoint}}>
-            <i class='codepoint-card--icon material-icons'>{{{unicode codepoint}}}</i>
-            <span class='codepoint-card--name'>{{codepoint}}</span>
-        </div>
-    {{/each}}
-</div>
+{{#if isSearching}}
+    <i id='temporary-icon' class='codepoint-card--icon material-icons'>{{query}}</i>
+
+{{else}}
+    <div class='grid-view'>
+        {{#each codepoints as |codepoint|}}
+            <div id={{codepoint}} class='codepoint-card search' title={{codepoint}}>
+                <i class='codepoint-card--icon material-icons'>{{{unicode codepoint}}}</i>
+                <span class='codepoint-card--name'>{{codepoint}}</span>
+            </div>
+        {{/each}}
+    </div>
+
+{{/if}}
