--- a/app/components/try-all-codepoints/template.hbs
+++ b/app/components/try-all-codepoints/template.hbs
@@ -1,5 +1,5 @@
 {{#if isSearching}}
-    <i id='temporary-icon' class='codepoint-card--icon material-icons'>{{query}}</i>
+    <i id='temporary-icon' class='codepoint-card--icon material-icons'></i>
 
 {{else}}
     <div class='grid-view'>
